--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,14 @@ pool:
   demands:
   - npm
 
+variables:
+  buildConfiguration: 'Release'
+
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET SDK 6.x'
   inputs:
+    packageType: sdk
     version: '6.x'
 
 - task: Npm@1
@@ -40,7 +44,7 @@ steps:
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
 
-- task: DotNetCoreCLI@2
+    - task: DotNetCoreCLI@2
   displayName: 'Publish the project - Release'
   inputs:
     command: 'publish'
